correção bug scrollbar

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -133,7 +133,6 @@ body,
 html {
   min-width: 375px;
   width: 100%;
-  overflow-x: hidden;
   scroll-behavior: smooth;
 }
 /* Importing Bootstrap SCSS file. */
